Hero title spacing fix

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -20,6 +20,7 @@ main .hero {
 
 main .hero h1 {
   max-width: 1680px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
